[gd_scene load_steps=9 format=2]

[ext_resource path="res://tower_grid/GridNode.gd" type="Script" id=1]
[ext_resource path="res://assets/DungeonCrawl_ProjectUtumnoTileset.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1, 1 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 928, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 960, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 992, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1024, 224, 32, 32 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="GridNode" type="Area2D"]
script = ExtResource( 1 )

[node name="SpriteBorder" type="ReferenceRect" parent="."]
margin_right = 16.0
margin_bottom = 16.0
mouse_filter = 2
border_color = Color( 0, 0, 0, 1 )
editor_only = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8, 8 )
scale = Vector2( 8, 8 )
shape = SubResource( 1 )

[node name="TowerSprite" type="AnimatedSprite" parent="."]
position = Vector2( 8, 8 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 7 )
frame = 1
playing = true

[node name="ColorResetTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="input_event" from="." to="." method="_input_event"]
